--- a/04-CSS-Layouts/style.css
+++ b/04-CSS-Layouts/style.css
@@ -1,7 +1,8 @@
 * {
-  /* border-top: 10px solid #1098ad; */
+  /* border: 0.5px solid #ff0000; */
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 /* PAGE SECTIONS */
@@ -14,7 +15,7 @@ body {
 }
 
 .container {
-  width: 800px;
+  width: 1200px;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
@@ -48,10 +49,7 @@ aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
-  /* padding-top: 50px;
-  padding-bottom: 50px; */
-  padding: 50px 0;
-  width: 500px;
+  padding: 50px 40px;
 }
 
 /* SMALLER ELEMENTS */
@@ -65,7 +63,7 @@ h1 {
   font-size: 26px;
   text-transform: uppercase;
   font-style: italic;
-}
+ }
 
 h2 {
   font-size: 40px;
@@ -82,6 +80,7 @@ h4 {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 p {
@@ -134,6 +133,7 @@ li:last-child {
 
 .related {
   list-style: none;
+  margin-left: 0;
 }
 
 body {
@@ -269,7 +269,44 @@ nav p {
 /* FLOATS */
 .author-img {
   float: left;
+  margin-bottom: 20px;
 }
 
 .author {
+  /* padding-lef t: 80px; */
+  float: left;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+h1 {
+  float: left;
+}
+
+nav {
+  float: right;
+}
+
+.clear {
+  clear: both;
+}
+
+.clearfix::after {
+  clear: both;
+  content: "";
+  display: block;
+}
+
+article {
+ float: left;
+  width: 825px;
+}
+
+aside {
+  width: 300px;
+    float: right;
+}
+
+footer {
+  clear: both;
 }
