--- a/04-CSS-Layouts/style.css
+++ b/04-CSS-Layouts/style.css
@@ -63,7 +63,7 @@ h1 {
   font-size: 26px;
   text-transform: uppercase;
   font-style: italic;
- }
+}
 
 h2 {
   font-size: 40px;
@@ -308,11 +308,68 @@ aside {
 
 footer {
   clear: both;
-} */
-
+}
+*/
 
 /* FLEXBOX */
 .main-header {
- align-items: center ;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.author {
+  margin-bottom: 0;
+  margin-left: 15px;
+}
+
+.related-post {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 5px;
+  display: block;
+}
+
+.related-author {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
+}
+
+.row {
+  display: flex;
+  gap: 75px;
+  margin-bottom: 60px;
+  align-items: flex-start;
+}
+
+article {
+  flex: 1;
+  margin-bottom: 0;
+}
+
+aside {
+  /*
+   DEFAULTS
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto; 
+  */
+  flex: 0 0 300px;
+  
 }
