--- a/CCTASLT/style.css
+++ b/CCTASLT/style.css
@@ -9,19 +9,7 @@ body {
   line-height: 1.4;
 }
 
-.clearfix::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-.container {
-  /*   background-color: red; */
-}
-
 .product-img {
-  float: left;
-  margin-right: 40px;
 }
 
 /* PRODUCT */
@@ -30,6 +18,10 @@ body {
   width: 825px;
   margin: 50px auto;
   position: relative;
+
+  display: grid;
+  grid-template-columns: 250px 1fr 1fr;
+  column-gap: 40px;
 }
 
 .product-title {
@@ -38,20 +30,26 @@ body {
   text-transform: uppercase;
   background-color: #f7f7f7;
   padding: 15px;
+  grid-column: 1 / -1;
 }
 
 /* PRODUCT INFORMATION */
 .product-info {
   /*  (825 - 8 - 250 - 80) / 2  */
-  width: 243px;
-  float: left;
-  margin-right: 40px;
+  /*   width: 243px; */
+  flex: 1;
   margin-top: 20px;
+}
+
+.product-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .price {
   font-size: 24px;
-  float: left;
 }
 
 .shipping {
@@ -59,9 +57,6 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   color: #777;
-  margin-bottom: 20px;
-  float: right;
-  margin-top: 8px;
 }
 
 .sale {
@@ -82,7 +77,6 @@ body {
 }
 
 .product-description {
-  clear: both;
   margin-bottom: 10px;
 }
 
@@ -98,12 +92,15 @@ body {
   text-decoration: none;
 }
 
+.product-colors {
+  display: flex;
+  gap: 10px;
+}
+
 .color {
   background-color: #000;
   height: 22px;
   width: 22px;
-  display: inline-block;
-  margin-right: 10px;
 }
 
 .color-blue {
@@ -124,9 +121,9 @@ body {
 
 /* PRODUCT DETAILS */
 .product-details {
-  width: 243px;
-  float: left;
+  /*   width: 243px; */
   margin-top: 20px;
+  flex: 1;
 }
 
 .details-title {
@@ -155,9 +152,24 @@ body {
   padding: 15px;
   width: 100%;
   border-top: 4px solid black;
+  grid-column: 1 / -1;
 }
 
 .add-cart:hover {
   color: #000;
   background-color: #fff;
+}
+
+a:link {
+  color: #1098ad;
+  text-decoration: none;
+  border: 2px solid #1098ad;
+  margin-left: 50%;
+}
+
+a:visited {
+  color: #1098ad;
+  text-decoration: none;
+  border: 2px solid #1098ad;
+  margin-left: 50%;
 }
