--- a/00-Navigation/style.css
+++ b/00-Navigation/style.css
@@ -17,6 +17,15 @@ input {
   font-weight: bold;
 }
 
+div p {
+  display: inline;
+  margin-left: 15px;
+}
+
+a:link {
+  color: #1098ad;
+}
+
 .header-1 {
   border: 5px solid #1098ad;
   color: #1098ad;
@@ -26,4 +35,3 @@ input {
   font-size: large;
   margin-bottom: 50px;
 }
-
